--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -199,9 +199,14 @@
 
       <ng-container matColumnDef="serial_no">
         <mat-header-cell *matHeaderCellDef>Serials</mat-header-cell>
-        <mat-cell appearance="outline" *matCellDef="let row">
-          <input matInput *ngIf="row.serial_no.length === 1 ? true : false" disabled="row.has_serial_no" [(ngModel)]="row.serial_no[0]"
-            oninput="this.value = this.value.toUpperCase()" />
+        <mat-cell *matCellDef="let row">
+          <input
+            matInput
+            oninput="this.value = this.value.toUpperCase()"
+            *ngIf="!row.serial_no[1]"
+            [disabled]="row.serial_no[0] === 'Non Serial Item' ? true : false"
+            [(ngModel)]="row.serial_no[0]"
+          />
           <p *ngIf="row.serial_no.length === 1 ? false : true">
             {{ getSerialsInputValue(row) }}
           </p>
