--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
@@ -238,8 +238,7 @@
             Delivered By
           </mat-header-cell>
           <mat-cell *matCellDef="let row">
-            {{row.purchase_receipt_items ?
-            row?.purchase_receipt_items[0]?.deliveredBy : '' }}
+            {{row.delivered_by ? row?.delivered_by[0] : '' }}
           </mat-cell>
           <mat-footer-cell *matFooterCellDef></mat-footer-cell>
         </ng-container>
