--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -81,7 +81,11 @@
 
 <ion-card *ngIf="filteredItemList.length !== 0">
   <ion-card-header>
-    <ion-card-title>Serial Range</ion-card-title>
+    <ion-card-title>
+      <ion-text color="tertiary">
+        Serial Range
+      </ion-text>
+    </ion-card-title>
   </ion-card-header>
   <ion-card-content>
     <ion-grid class="ion-no-padding">
@@ -123,8 +127,14 @@
 </ion-card>
 
 <ion-card *ngIf="filteredItemList.length !== 0">
-  <ion-card-content>
-    <ion-card-title>Products</ion-card-title>
+  <ion-card-header>
+    <ion-card-title>
+      <ion-text color="tertiary">
+        Products
+      </ion-text>
+    </ion-card-title>
+  </ion-card-header>
+  <ion-card-content class="ion-no-padding">
     <mat-table #table [dataSource]="itemDataSource" style="width: 100%;">
       <ng-container matColumnDef="item_code">
         <mat-header-cell *matHeaderCellDef>Item Code</mat-header-cell>
@@ -172,7 +182,11 @@
       <ng-container matColumnDef="has_serial_no">
         <mat-header-cell *matHeaderCellDef>Has Serial</mat-header-cell>
         <mat-cell *matCellDef="let row">
-          <mat-checkbox class="example-margin" [(ngModel)]="row.has_serial_no" [disabled]="true">
+          <mat-checkbox
+            class="example-margin"
+            [(ngModel)]="row.has_serial_no"
+            [disabled]="true"
+          >
           </mat-checkbox>
         </mat-cell>
       </ng-container>
@@ -199,8 +213,14 @@
 </ion-card>
 
 <ion-card *ngIf="filteredItemList.length !== 0">
-  <ion-card-content>
-    <ion-card-title>Serials</ion-card-title>
+  <ion-card-header>
+    <ion-card-title>
+      <ion-text color="tertiary">
+        Serials
+      </ion-text>
+    </ion-card-title>
+  </ion-card-header>
+  <ion-card-content class="ion-no-padding">
     <mat-table #table [dataSource]="serialDataSource" style="width: 100%;">
       <ng-container matColumnDef="item_code">
         <mat-header-cell *matHeaderCellDef>Item Code</mat-header-cell>
