--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.scss
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.scss
@@ -71,3 +71,13 @@ mat-cell {
   display: flex;
   justify-content: center;
 }
+
+.mat-paginator-sticky {
+  bottom: 0px;
+  position: sticky;
+  z-index: 10;
+}
+
+.mat-column-sr_no {
+  flex: 0 0 5%;
+}
