feat(excel-rma): Add purchase warranty to serials

--- a/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
+++ b/packages/rma-frontend/src/app/purchase-ui/view-purchase-invoice/purchase-assign-serials/purchase-assign-serials.component.html
@@ -419,7 +419,7 @@
 
       <!-- purchase_document_no -->
       <ng-container matColumnDef="purchase_document_no">
-        <mat-header-cell *matHeaderCellDef>Purchase Invoice</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef>Purchase Receipt</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
             {{ row.purchase_document_no }}
