--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -405,22 +405,22 @@
         </mat-cell>
       </ng-container>
 
-      <!-- company -->
-      <ng-container matColumnDef="company">
-        <mat-header-cell *matHeaderCellDef>Company</mat-header-cell>
+      <!-- purchase_document_no -->
+      <ng-container matColumnDef="purchase_document_no">
+        <mat-header-cell *matHeaderCellDef>Purchase Receipt</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
-            {{ row.company }}
+            {{ row.purchase_document_no }}
           </ng-container>
         </mat-cell>
       </ng-container>
 
-      <!-- purchase_document_no -->
-      <ng-container matColumnDef="purchase_document_no">
-        <mat-header-cell *matHeaderCellDef>Purchase Invoice</mat-header-cell>
+      <!-- delivery_note -->
+      <ng-container matColumnDef="delivery_note">
+        <mat-header-cell *matHeaderCellDef>Delivery Note</mat-header-cell>
         <mat-cell *matCellDef="let row">
           <ng-container>
-            {{ row.purchase_document_no }}
+            {{ row.delivery_note }}
           </ng-container>
         </mat-cell>
       </ng-container>
