--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
@@ -11,6 +11,26 @@
   </ion-toolbar>
 </ion-header>
 
+  <ion-card>
+    <ion-card-header>
+      File Upload
+    </ion-card-header>
+    <ion-card-content>
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col>
+      <input #csvFileInput type="file" id="txtFileUpload" (change)="fileChangedEvent($event)" accept=".csv" />
+      </ion-col>
+      <ion-col class="ion-text-right">
+        <ion-button color="tertiary" (click)="createMaterialTransfer()">
+          Submit Transfer
+        </ion-button>
+      </ion-col>
+      </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+
 <ion-content class="page-background">
   <ion-card>
     <ion-card-header>
@@ -23,8 +43,8 @@
           </ion-card-title>
         </ion-col>
         <ion-col class="ion-text-right">
-          <ion-button color="tertiary" (click)="createMaterialTransfer()">
-            Create
+          <ion-button color="tertiary" (click)="addRow()">
+            Add
           </ion-button>
         </ion-col>
       </ion-row>
@@ -34,28 +54,14 @@
         <ion-row>
           <ion-col>
             <mat-form-field class="example-full-width">
-              <input
-                matInput
-                oninput="this.value = this.value.toUpperCase()"
-                placeholder="From Range"
-                type="text"
-                name="From Range"
-                [(ngModel)]="rangePickerState.fromRange"
-                (ngModelChange)="this.fromRangeUpdate.next($event)"
-                required
-              />
+              <input matInput oninput="this.value = this.value.toUpperCase()" placeholder="From Range" type="text"
+                name="From Range" [(ngModel)]="rangePickerState.fromRange"
+                (ngModelChange)="this.fromRangeUpdate.next($event)" required />
             </mat-form-field>
             <mat-form-field class="example-full-width">
-              <input
-                type="text"
-                oninput="this.value = this.value.toUpperCase()"
-                matInput
-                placeholder="To Range"
-                type="string"
-                name="To Range"
-                [(ngModel)]="rangePickerState.toRange"
-                (ngModelChange)="this.toRangeUpdate.next($event)"
-              />
+              <input type="text" oninput="this.value = this.value.toUpperCase()" matInput placeholder="To Range"
+                type="string" name="To Range" [(ngModel)]="rangePickerState.toRange"
+                (ngModelChange)="this.toRangeUpdate.next($event)" />
             </mat-form-field>
           </ion-col>
 
@@ -67,42 +73,20 @@
 
           <ion-col>
             <mat-form-field class="example-full-width">
-              <input
-                type="text"
-                placeholder="Source Warehouse"
-                matInput
-                [formControl]="warehouseState.s_warehouse"
-                [matAutocomplete]="from_warehouse"
-              />
-              <mat-autocomplete
-                autoActiveFirstOption
-                #from_warehouse="matAutocomplete"
-              >
-                <mat-option
-                  *ngFor="let s_warehouse of filteredWarehouseList1 | async"
-                  [value]="s_warehouse.name"
-                >
+              <input type="text" placeholder="Source Warehouse" matInput [formControl]="warehouseState.s_warehouse"
+                [matAutocomplete]="from_warehouse" />
+              <mat-autocomplete autoActiveFirstOption #from_warehouse="matAutocomplete">
+                <mat-option *ngFor="let s_warehouse of filteredWarehouseList1 | async" [value]="s_warehouse.name">
                   {{ s_warehouse.name }}
                 </mat-option>
               </mat-autocomplete>
             </mat-form-field>
 
             <mat-form-field class="example-full-width">
-              <input
-                type="text"
-                placeholder="Target Warehouse"
-                matInput
-                [formControl]="warehouseState.t_warehouse"
-                [matAutocomplete]="warehouse"
-              />
-              <mat-autocomplete
-                autoActiveFirstOption
-                #warehouse="matAutocomplete"
-              >
-                <mat-option
-                  *ngFor="let warehouse of filteredWarehouseList2 | async"
-                  [value]="warehouse.name"
-                >
+              <input type="text" placeholder="Target Warehouse" matInput [formControl]="warehouseState.t_warehouse"
+                [matAutocomplete]="warehouse" />
+              <mat-autocomplete autoActiveFirstOption #warehouse="matAutocomplete">
+                <mat-option *ngFor="let warehouse of filteredWarehouseList2 | async" [value]="warehouse.name">
                   {{ warehouse.name }}
                 </mat-option>
               </mat-autocomplete>
@@ -123,20 +107,11 @@
             </ion-text>
           </ion-card-title>
         </ion-col>
-        <ion-col class="ion-text-right">
-          <ion-button color="tertiary" (click)="addRow()">
-            Add
-          </ion-button>
-        </ion-col>
       </ion-row>
     </ion-card-header>
 
     <ion-card-content class="ion-no-padding">
-      <mat-table
-        #table
-        [dataSource]="materialTransferDataSource"
-        style="width: 100%;"
-      >
+      <mat-table #table [dataSource]="materialTransferDataSource" style="width: 100%;">
         <ng-container matColumnDef="s_warehouse">
           <mat-header-cell *matHeaderCellDef>Source Warehouse</mat-header-cell>
           <mat-cell *matCellDef="let row">
@@ -176,12 +151,8 @@
         <ng-container matColumnDef="serial_no">
           <mat-header-cell *matHeaderCellDef>Serials</mat-header-cell>
           <mat-cell appearance="outline" *matCellDef="let row">
-            <input
-              matInput
-              *ngIf="row.serial_no.length === 1 ? true : false"
-              [(ngModel)]="row.serial_no[0]"
-              oninput="this.value = this.value.toUpperCase()"
-            />
+            <input matInput *ngIf="row.serial_no.length === 1 ? true : false" [(ngModel)]="row.serial_no[0]"
+              oninput="this.value = this.value.toUpperCase()" />
             <p *ngIf="row.serial_no.length === 1 ? false : true">
               {{ getSerialsInputValue(row) }}
             </p>
@@ -197,16 +168,12 @@
           </mat-cell>
         </ng-container>
 
-        <mat-header-row
-          *matHeaderRowDef="materialTransferDisplayedColumns; sticky: true"
-        ></mat-header-row>
-        <mat-row
-          *matRowDef="
+        <mat-header-row *matHeaderRowDef="materialTransferDisplayedColumns; sticky: true"></mat-header-row>
+        <mat-row *matRowDef="
             let row;
             columns: materialTransferDisplayedColumns;
             let i = index
-          "
-        ></mat-row>
+          "></mat-row>
       </mat-table>
     </ion-card-content>
   </ion-card>
